--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -231,6 +231,7 @@
 .minimal-map-search-host {
   width: 100%;
   height: 100%;
+  border-radius: inherit;
   pointer-events: none;
   --minimal-map-search-width: 320px;
   --minimal-map-search-background-primary: #ffffff;
@@ -264,6 +265,8 @@
   top: 0;
   left: 0;
   bottom: 0;
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
   width: calc(
     var(--minimal-map-search-width) + var(--minimal-map-search-margin-left) +
       var(--minimal-map-search-margin-right)
